--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello">Joshua said:</string>
     <string name="app_name">LonelyTwitter</string>
     <string name="save">Save</string>
+    <string name="old_tweets">My old tweets</string>
     <string name="clear">Clear</string>
 
 </resources>
